<resources>
    <string name="app_name">Ticktick</string>
    <string name="title_activity_loans_n_lendings">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loans_and_lendings">LOANS AND LENDINGS</string>
    <string name="person_s_name">Person\'s Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="loans_and_lendings">LOANS AND LENDINGS</string>
    <string name="persons_name">Person\'s Name</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="add_loans">Add Loans</string>
    <string name="add_lendings">Add Lendings</string>
    <string name="loand_and_lendings">LOAND AND LENDINGS</string>
    <string name="personsS_name">Person\'s Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="update_loan">Update Loan</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="update_lendings">Update Lendings</string>
    <string name="loans_and_lendings">LOANS AND LENDINGS</string>
    <string name="personSSs_name">Person\'s Name</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="loans_and_lendings">LOANS AND LENDINGS</string>
    <string name="loans">Loans</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="loans_and_lendings">LOANS AND LENDINGS</string>
    <string name="lendings">Lendings</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="loand_and_lendings">LOAND AND LENDINGS</string>
    <string name="loansS">LOANS</string>
    <string name="lendingsS">LENDINGS</string>
</resources>